--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ h3 {
     font-size: 27px;
 }
 
+#title {
+    cursor: pointer;
+}
+
 .top-bar {
     display: flex;
     flex-direction: row;
@@ -44,8 +48,9 @@ h3 {
     border-radius: 2%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    margin: 5px;
+    margin: 40px;
     width: 20%;
+    overflow: hidden;
 }
 
 .book-card > * {
@@ -64,3 +69,50 @@ h3 {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+.delete-book {
+    display: flex;
+    flex-direction: row;
+    width: 10%;
+    background-color: #eb3b5a;
+    margin: 0;
+    border-radius: 5%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.delete-book:hover {
+    background-color: #fc5c65;
+}
+
+
+.delete-book > p {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    font-weight: bolder;
+    color: white;
+}
+
+.no-books {
+    display: none;
+}
+
+.add-new-book {
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+    margin-top: 30px;
+    background-color: antiquewhite;
+    font-size: x-large;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.add-new-book:hover {
+    background-color: #2C3A47;
+    color: #fff;
+}
