--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     margin: 40px;
+    padding: 5px;
     width: 20%;
     overflow: hidden;
 }
@@ -67,30 +68,6 @@ h3 {
 
 .book-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.delete-book {
-    display: flex;
-    flex-direction: row;
-    width: 10%;
-    background-color: #eb3b5a;
-    margin: 0;
-    border-radius: 5%;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.delete-book:hover {
-    background-color: #fc5c65;
-}
-
-
-.delete-book > p {
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 20px;
-    font-weight: bolder;
-    color: white;
 }
 
 .no-books {
@@ -115,4 +92,49 @@ h3 {
 .add-new-book:hover {
     background-color: #2C3A47;
     color: #fff;
+}
+
+.btns-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 0;
+}
+
+.delete-book {
+    width: 10%;
+    background-color: #eb3b5a;
+    margin: 0;
+    padding: 6px;
+    border-radius: 5%;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.delete-book:hover {
+    background-color: #fc5c65;
+}
+
+
+.delete-book > span {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    font-weight: bolder;
+    color: white;
+}
+
+.edit-book {
+    width: 10%;
+    margin: 0;
+    padding: 6px;
+    border-radius: 5%;
+    background-color: #eccc68;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.edit-book:hover {
+    background-color: antiquewhite;
 }
