--- a/css/form.css
+++ b/css/form.css
@@ -43,7 +43,25 @@ input[type=text], input[type=number] {
 }
 
 .submit:hover {
-    background-color: #2C3A47;
+    background-color: #10ac84;
+    color: #fff;
+}
+
+.cancel {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+    margin-top: 30px;
+    font-size: x-large;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.cancel:hover {
+    background-color: #e74c3c;
     color: #fff;
 }
 
