--- a/css/editForm.css
+++ b/css/editForm.css
@@ -72,3 +72,31 @@ input[type=text], input[type=number] {
 .visuallyHiden {
     opacity: 0;
 }
+
+@media only screen and (min-device-width: 280px) and (max-device-width: 653px) {
+    .edit-form-title-container {
+        margin-left: 10px;
+    }
+}
+
+@media only screen and (min-device-width: 360px) and (max-device-width: 640px) {
+    .edit-form-title-container {
+        margin-top: 10vh;
+    }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .edit-form-title-container {
+        margin-top: 10vh;
+    }
+}
+
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
+    .edit-form-title-container {
+        margin-top: 20vh;
+    }
+
+    .edit-form-container {
+        width: 90%;
+    }
+}
